Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics.html
+++ b/pr/347/learn/intrinsics.html
@@ -44784,7 +44784,7 @@ to the documents. For contribution guidelines see
 <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/MINIBOOKS.md">MINIBOOKS</a>
 and the following Copyright guidelines.</p>
 
-<h2 id="see-also">See also</h2>
+<h2 id="see-also">See Also</h2>
 <ul>
   <li>The <a href="https://stdlib.fortran-lang.org/">Fortran stdlib</a> project</li>
   <li><a href="https://fortran-lang.org/packages/fpm">fpm(1)</a> packages, many of which are general-purpose libraries/modules</li>
