--- a/pr/347/learn/intrinsics/ATOMIC_FETCH_ADD.html
+++ b/pr/347/learn/intrinsics/ATOMIC_FETCH_ADD.html
@@ -44855,7 +44855,7 @@ is converted to the kind of <strong>atom</strong>.</dd>
 
 <p><a href="ATOMIC_DEFINE"><strong>atomic_define</strong>(3)</a>,
 <a href="ATOMIC_ADD"><strong>atomic_add</strong>(3)</a>,
-iso_fortran_env__(3),</p>
+<strong>iso_fortran_env</strong>(3),</p>
 
 <p><a href="ATOMIC_FETCH_AND"><strong>atomic_fetch_and</strong>(3)</a>,
 <a href="ATOMIC_FETCH_OR"><strong>atomic_fetch_or</strong>(3)</a>,</p>
