--- a/pr/347/learn/intrinsics/CMPLX.html
+++ b/pr/347/learn/intrinsics/CMPLX.html
@@ -44860,7 +44860,7 @@ converted to the <em>real</em> component. If <strong>x</strong> is <em>complex</
 present. If <strong>y</strong> is present it is converted to the imaginary component. If
 <strong>y</strong> is not present then the imaginary component is set to <strong>0.0</strong>.</p>
 
-<h2 id="cmplx3-and-double-precision__"><strong>cmplx</strong>(3) and double precision__</h2>
+<h2 id="cmplx3-and-double-precision"><strong>cmplx(3) and double precision</strong></h2>
 
 <p>The Fortran 90 language defines <strong>cmplx</strong>(3) as always returning a result
 that is type <strong><em>complex</em></strong>(kind=KIND(0.0)).</p>
