--- a/pr/347/learn/intrinsics/COS.html
+++ b/pr/347/learn/intrinsics/COS.html
@@ -44886,7 +44886,7 @@
 
 <p>The return value is of the same type and kind as <strong>x</strong>. The real part of the
 result is in radians. If <strong>x</strong> is of the type <em>real</em>, the return value lies in
-the range <em>_-1 &lt;= cos(x) &lt;= 1</em>.._</p>
+the range <strong>-1 &lt;= cos(x) &lt;= 1</strong> .</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
