--- a/pr/347/learn/intrinsics/EPSILON.html
+++ b/pr/347/learn/intrinsics/EPSILON.html
@@ -44941,7 +44941,8 @@ not change.</p>
 </span><span class="kt">real</span><span class="p">(</span><span class="nb">kind</span><span class="o">=</span><span class="n">dp</span><span class="p">)</span><span class="w"> </span><span class="p">::</span><span class="w"> </span><span class="n">y</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="mf">2.33d0</span><span class="w">
 
    </span><span class="c1">! so if x is of type real32, epsilon(x) has the value 2**-23</span><span class="w">
-   </span><span class="k">print</span><span class="w"> </span><span class="o">*</span><span class="p">,</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="n">x</span><span class="p">)</span><span class="w"> </span><span class="c1">! note just the type and kind of x matter, not the value</span><span class="w">
+   </span><span class="k">print</span><span class="w"> </span><span class="o">*</span><span class="p">,</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="n">x</span><span class="p">)</span><span class="w"> 
+   </span><span class="c1">! note just the type and kind of x matter, not the value</span><span class="w">
    </span><span class="k">print</span><span class="w"> </span><span class="o">*</span><span class="p">,</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="nb">huge</span><span class="p">(</span><span class="n">x</span><span class="p">))</span><span class="w"> 
    </span><span class="k">print</span><span class="w"> </span><span class="o">*</span><span class="p">,</span><span class="w"> </span><span class="nb">epsilon</span><span class="p">(</span><span class="nb">tiny</span><span class="p">(</span><span class="n">x</span><span class="p">))</span><span class="w"> 
 
