--- a/pr/347/learn/intrinsics/IS_CONTIGUOUS.html
+++ b/pr/347/learn/intrinsics/IS_CONTIGUOUS.html
@@ -44981,7 +44981,7 @@ an object with the CONTIGUOUS attribute,</p>
 a nonpointer whole array that is not assumed-shape,</p>
   </li>
   <li>
-    <p><em>__</em>(3)
+    <p><strong>(3)</strong>
 an assumed-shape array that is argument associated with an array
 that is contiguous,</p>
   </li>
