--- a/pr/347/learn/intrinsics/LEN.html
+++ b/pr/347/learn/intrinsics/LEN.html
@@ -45037,20 +45037,22 @@ the return value is of default integer kind.</p>
 
    </span><span class="n">string</span><span class="o">=</span><span class="s1">' How long is this string?     '</span><span class="w">
    </span><span class="n">ii</span><span class="o">=</span><span class="nb">len</span><span class="p">(</span><span class="n">string</span><span class="p">)</span><span class="w">
-   </span><span class="c1">! note when adjacent strings are printed no space is inserted between them</span><span class="w">
+   </span><span class="c1">! note when adjacent strings are printed no space is inserted</span><span class="w">
+   </span><span class="c1">! between them</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="s1">'['</span><span class="p">,</span><span class="n">string</span><span class="p">,</span><span class="s1">']'</span><span class="p">,</span><span class="s1">' length='</span><span class="p">,</span><span class="n">ii</span><span class="w">
 
    </span><span class="c1">! Related Matters:</span><span class="w">
 
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="w">
-   </span><span class="c1">! you can also query the length (and other attributes) of a string using a </span><span class="w">
+   </span><span class="c1">! you can also query the length (and other attributes) of a string</span><span class="w">
+   </span><span class="c1">! using a</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="w"> </span><span class="s2">"type parameter inquiry:"</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="s1">'length='</span><span class="p">,</span><span class="n">string</span><span class="o">%</span><span class="nb">len</span><span class="p">,</span><span class="s1">'kind='</span><span class="p">,</span><span class="n">string</span><span class="o">%</span><span class="nb">kind</span><span class="w">
    </span><span class="c1">! note a type parameter inquiry of an intrinsic requires Fortran 2018+ </span><span class="w">
 
-   </span><span class="c1">! note that all that is required is an A descriptor in a format, a numeric</span><span class="w">
-   </span><span class="c1">! length is not required. If a length IS provided the string will be trimmed</span><span class="w">
-   </span><span class="c1">! or blank padded ON THE LEFT to the specified length</span><span class="w">
+   </span><span class="c1">! note that all that is required is an A descriptor in a format, a</span><span class="w">
+   </span><span class="c1">! numeric length is not required. If a length IS provided the string</span><span class="w">
+   </span><span class="c1">! will be trimmed or blank padded ON THE LEFT to the specified length</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="s1">'(" ",a," ")'</span><span class="p">)</span><span class="nb">repeat</span><span class="p">(</span><span class="s1">'='</span><span class="p">,</span><span class="n">ii</span><span class="p">)</span><span class="w">
    </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="s1">'("[",a,"]")'</span><span class="p">)</span><span class="n">string</span><span class="w">
@@ -45142,9 +45144,10 @@ of arguments, and search for certain arguments:</p>
 <a href="LEN"><strong>len</strong>(3)</a>,
 <a href="REPEAT"><strong>repeat</strong>(3)</a>,
 <a href="TRIM"><strong>trim</strong>(3)</a></p>
-    <h6 id="fortran-lang-intrinsic-descriptions-urbanjost">fortran-lang intrinsic descriptions (@urbanjost)</h6>
   </li>
 </ul>
+
+<h6 id="fortran-lang-intrinsic-descriptions-urbanjost">fortran-lang intrinsic descriptions (@urbanjost)</h6>
 
 
       <div class="container-flex">
