--- a/pr/347/learn/intrinsics/MAXLOC.html
+++ b/pr/347/learn/intrinsics/MAXLOC.html
@@ -45091,15 +45091,17 @@ not start with one.</p>
 
 </span><span class="n">expected</span><span class="w"> </span><span class="n">output</span><span class="p">:</span><span class="w">
 </span><span class="err">```</span><span class="n">text</span><span class="w">
-   </span><span class="o">-</span><span class="w"> </span><span class="err">__</span><span class="mi">3</span><span class="err">__</span><span class="w">
-
-   </span><span class="o">-</span><span class="w"> </span><span class="err">__</span><span class="mi">3</span><span class="err">__</span><span class="w">
-     </span><span class="mi">3</span><span class="w"> </span><span class="mi">3</span><span class="w"> </span><span class="mi">3</span><span class="w"> </span><span class="mi">3</span><span class="w">
-
-   </span><span class="o">-</span><span class="w"> </span><span class="err">__</span><span class="mi">5</span><span class="err">__</span><span class="w">
-     </span><span class="mi">5</span><span class="w"> </span><span class="mi">5</span><span class="w"> </span><span class="err">__</span><span class="mi">-3</span><span class="err">__</span><span class="w"> </span><span class="mi">47</span><span class="w"> </span><span class="err">__</span><span class="mi">-2</span><span class="err">__</span><span class="w"> </span><span class="mi">48</span><span class="w"> </span><span class="err">__</span><span class="mi">-1</span><span class="err">__</span><span class="w"> </span><span class="mi">49</span><span class="w"> </span><span class="mi">0</span><span class="w"> </span><span class="mi">50</span><span class="w"> </span><span class="mi">1</span><span class="w"> </span><span class="mi">49</span><span class="w"> </span><span class="mi">2</span><span class="w"> </span><span class="mi">48</span><span class="w"> </span><span class="mi">3</span><span class="w"> </span><span class="mi">47</span><span class="w"> </span><span class="mi">4</span><span class="w">
+      </span><span class="mi">3</span><span class="w">       </span><span class="mi">5</span><span class="w">
+      </span><span class="mi">3</span><span class="w">       </span><span class="mi">3</span><span class="w">       </span><span class="mi">3</span><span class="w">       </span><span class="mi">3</span><span class="w">       </span><span class="mi">3</span><span class="w">
+      </span><span class="mi">5</span><span class="w">       </span><span class="mi">5</span><span class="w">       </span><span class="mi">5</span><span class="w">
+   </span><span class="mi">-3</span><span class="w"> </span><span class="mi">47</span><span class="w">
+   </span><span class="mi">-2</span><span class="w"> </span><span class="mi">48</span><span class="w">
+   </span><span class="mi">-1</span><span class="w"> </span><span class="mi">49</span><span class="w">
+   </span><span class="mi">0</span><span class="w"> </span><span class="mi">50</span><span class="w">
+   </span><span class="mi">1</span><span class="w"> </span><span class="mi">49</span><span class="w">
+   </span><span class="mi">2</span><span class="w"> </span><span class="mi">48</span><span class="w">
+   </span><span class="mi">3</span><span class="w"> </span><span class="mi">47</span><span class="w">
 </span></code></pre></div></div>
-
 <h2 id="standard"><strong>Standard</strong></h2>
 
 <p>Fortran 95 and later</p>
