--- a/pr/347/learn/intrinsics/TINY.html
+++ b/pr/347/learn/intrinsics/TINY.html
@@ -45137,7 +45137,7 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p><strong>tiny(x)</strong> returns the smallest positive (non zero) number of the type
-and kind of <em>_x</em>.</p>
+and kind of <strong>x</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
