Jekyll build, commit 7c6a9f5e20acb2e0e458be0434f4402dc83b7392 (on:push)

--- a/packages/scientific.html
+++ b/packages/scientific.html
@@ -264,8 +264,8 @@
                 <i class="devicon-github-plain colored"></i>
                 CaNS</a></h3> </td>
               <td> 
-                  
-                  </td>
+                  <img src="https://img.shields.io/github/v/release/p-costa/CaNS?color=green">
+              </td>
               <td> 
                    <img src="https://img.shields.io/github/license/p-costa/CaNS">
                </td>
