Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/AIMAG.html
+++ b/pr/347/learn/intrinsics/AIMAG.html
@@ -44838,7 +44838,7 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>aimag</strong>(3) - [NUMERIC:TYPE] Imaginary part of complex number
+<p><strong>aimag</strong>(3) - [TYPE:NUMERIC] Imaginary part of complex number
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
