--- a/pr/347/learn/intrinsics/CMPLX.html
+++ b/pr/347/learn/intrinsics/CMPLX.html
@@ -44922,7 +44922,7 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>cmplx</strong>(3) - [NUMERIC:TYPE] Complex conversion function
+<p><strong>cmplx</strong>(3) - [TYPE:NUMERIC] Complex conversion function
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
