--- a/pr/347/learn/intrinsics/DBLE.html
+++ b/pr/347/learn/intrinsics/DBLE.html
@@ -44960,7 +44960,7 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>dble</strong>(3) - [NUMERIC:TYPE] Double conversion function
+<p><strong>dble</strong>(3) - [TYPE:NUMERIC] Double conversion function
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
