--- a/pr/347/learn/intrinsics/LOGICAL.html
+++ b/pr/347/learn/intrinsics/LOGICAL.html
@@ -45074,7 +45074,7 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>logical</strong>(3) - [BIT:MANIPULATION] Converts one kind of <em>logical</em> variable to another
+<p><strong>logical</strong>(3) - [TYPE:LOGICAL] Converts one kind of <em>logical</em> variable to another
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
