--- a/pr/347/learn/intrinsics/REAL.html
+++ b/pr/347/learn/intrinsics/REAL.html
@@ -45149,7 +45149,7 @@
       </div>
 
       <h2 id="name"><strong>Name</strong></h2>
-<p><strong>real</strong>(3) - [NUMERIC:TYPE] Convert to real type
+<p><strong>real</strong>(3) - [TYPE:NUMERIC] Convert to real type
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
