--- a/pr/347/learn/intrinsics/TRANSFER.html
+++ b/pr/347/learn/intrinsics/TRANSFER.html
@@ -45212,7 +45212,7 @@
 
       <h2 id="name"><strong>Name</strong></h2>
 
-<p><strong>transfer</strong>(3) - [BIT:COPY] Transfer bit patterns
+<p><strong>transfer</strong>(3) - [TYPE:MOLD] Transfer bit patterns
 (GFDL)</p>
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
