--- a/pr/347/learn/intrinsics/TYPE_index.html
+++ b/pr/347/learn/intrinsics/TYPE_index.html
@@ -661,7 +661,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -670,7 +670,7 @@
       <td>● Imaginary part of complex number</td>
     </tr>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -679,7 +679,7 @@
       <td>● Complex conversion function</td>
     </tr>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -688,7 +688,7 @@
       <td>● Convert to integer type</td>
     </tr>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -697,7 +697,7 @@
       <td>● Nearest whole number</td>
     </tr>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -706,7 +706,7 @@
       <td>● Convert to real type</td>
     </tr>
     <tr>
-      <td><em>NUMERIC:TYPE</em></td>
+      <td><em>TYPE:NUMERIC</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
@@ -717,7 +717,18 @@
   </tbody>
   <tbody>
     <tr>
-      <td><em>LOGICAL:TYPE</em></td>
+      <td><em>TYPE:MOLD</em></td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td><a href="/pr/347/learn/intrinsics/TRANSFER"><strong>transfer</strong></a></td>
+      <td> </td>
+      <td>● Transfer bit patterns</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <td><em>TYPE:LOGICAL</em></td>
       <td> </td>
       <td> </td>
       <td> </td>
