--- a/pr/347/learn/intrinsics/PRODUCT.html
+++ b/pr/347/learn/intrinsics/PRODUCT.html
@@ -45369,6 +45369,8 @@ dim=3 :( 2 3 )
 <p><a href="SUM"><strong>sum</strong>(3)</a>, note that an element by element multiplication is done
 directly using the star character.</p>
 
+<h6 id="fortran-lang-intrinsic-descriptions-urbanjost">fortran-lang intrinsic descriptions (@urbanjost)</h6>
+
 
       <div class="container-flex">
 
