--- a/pr/347/learn/intrinsics/ASIN.html
+++ b/pr/347/learn/intrinsics/ASIN.html
@@ -44913,17 +44913,18 @@ of the track using the arcsine. Given</p>
 </span><span class="c1">! value to convert degrees to radians</span><span class="w">
 </span><span class="kt">real</span><span class="p">(</span><span class="nb">kind</span><span class="o">=</span><span class="n">dp</span><span class="p">),</span><span class="k">parameter</span><span class="w"> </span><span class="p">::</span><span class="w"> </span><span class="n">D2R</span><span class="o">=</span><span class="nb">acos</span><span class="p">(</span><span class="mf">-1.0_dp</span><span class="p">)/</span><span class="mf">180.0_dp</span><span class="w">
 </span><span class="kt">real</span><span class="p">(</span><span class="nb">kind</span><span class="o">=</span><span class="n">dp</span><span class="p">)</span><span class="w">           </span><span class="p">::</span><span class="w"> </span><span class="n">angle</span><span class="p">,</span><span class="w"> </span><span class="n">rise</span><span class="p">,</span><span class="w"> </span><span class="n">run</span><span class="w">
+</span><span class="kt">character</span><span class="p">(</span><span class="nb">len</span><span class="o">=*</span><span class="p">),</span><span class="k">parameter</span><span class="w"> </span><span class="p">::</span><span class="w"> </span><span class="nb">all</span><span class="o">=</span><span class="s1">'(*(g0,1x))'</span><span class="w">
   </span><span class="c1">! given sine(theta) = 1.25 miles/50 miles (opposite/hypotenuse)</span><span class="w">
   </span><span class="c1">! then taking the arcsine of both sides of the equality yields</span><span class="w">
   </span><span class="c1">! theta = arcsine(1.25 miles/50 miles) ie. arcsine(opposite/hypotenuse)</span><span class="w">
   </span><span class="n">rise</span><span class="o">=</span><span class="mf">1.250_dp</span><span class="w">
   </span><span class="n">run</span><span class="o">=</span><span class="mf">50.00_dp</span><span class="w">
   </span><span class="n">angle</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nb">asin</span><span class="p">(</span><span class="n">rise</span><span class="p">/</span><span class="n">run</span><span class="p">)</span><span class="w">
-  </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="s1">'angle of incline(radians) = '</span><span class="p">,</span><span class="w"> </span><span class="n">angle</span><span class="w">
+  </span><span class="k">print</span><span class="w"> </span><span class="nb">all</span><span class="p">,</span><span class="w"> </span><span class="s1">'angle of incline(radians) = '</span><span class="p">,</span><span class="w"> </span><span class="n">angle</span><span class="w">
   </span><span class="n">angle</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">angle</span><span class="p">/</span><span class="n">D2R</span><span class="w">
-  </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="s1">'angle of incline(degrees) = '</span><span class="p">,</span><span class="w"> </span><span class="n">angle</span><span class="w">
+  </span><span class="k">print</span><span class="w"> </span><span class="nb">all</span><span class="p">,</span><span class="w"> </span><span class="s1">'angle of incline(degrees) = '</span><span class="p">,</span><span class="w"> </span><span class="n">angle</span><span class="w">
 
-  </span><span class="k">write</span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="o">*</span><span class="p">)</span><span class="s1">'percent grade='</span><span class="p">,</span><span class="n">rise</span><span class="p">/</span><span class="n">run</span><span class="o">*</span><span class="mf">100.0_dp</span><span class="w">
+  </span><span class="k">print</span><span class="w"> </span><span class="nb">all</span><span class="p">,</span><span class="w"> </span><span class="s1">'percent grade='</span><span class="p">,</span><span class="n">rise</span><span class="p">/</span><span class="n">run</span><span class="o">*</span><span class="mf">100.0_dp</span><span class="w">
 </span><span class="k">end</span><span class="w"> </span><span class="k">program</span><span class="w"> </span><span class="n">demo_asin</span><span class="w">
 </span></code></pre></div></div>
 
@@ -44948,6 +44949,10 @@ train reducing the allowable grade.</p>
 <p>FORTRAN 77 and later, for a complex argument Fortran 2008 or later</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
+
+<ul>
+  <li><a href="https://en.wikipedia.org/wiki/Inverse_trigonometric_functions">wikipedia: inverse trigonometric functions</a></li>
+</ul>
 
 <p>Inverse function: <a href="SIN"><strong>sin</strong>(3)</a></p>
 
