--- a/pr/347/learn/intrinsics/ATANH.html
+++ b/pr/347/learn/intrinsics/ATANH.html
@@ -44904,6 +44904,9 @@ imaginary part of the result is in radians and lies between</p>
 <p>Fortran 2008 and later</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
+<ul>
+  <li><a href="https://en.wikipedia.org/wiki/Hyperbolic_functions">Wikipedia:hyperbolic functions</a></li>
+</ul>
 
 <p>Inverse function: <a href="TANH"><strong>tanh</strong>(3)</a></p>
 
