--- a/pr/347/learn/intrinsics/COSH.html
+++ b/pr/347/learn/intrinsics/COSH.html
@@ -44996,6 +44996,9 @@ imaginary part of the result is in radians.</p>
 <p>FORTRAN 77 and later, for a complex argument - Fortran 2008 or later</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
+<ul>
+  <li><a href="https://en.wikipedia.org/wiki/Hyperbolic_functions">Wikipedia:hyperbolic functions</a></li>
+</ul>
 
 <p>Inverse function: <a href="ACOSH"><strong>acosh</strong>(3)</a></p>
 
