--- a/pr/347/learn/intrinsics/SINH.html
+++ b/pr/347/learn/intrinsics/SINH.html
@@ -45265,9 +45265,8 @@ in radians.</p>
 <p>Fortran 95 and later, for a complex argument Fortran 2008 or later</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
-
 <ul>
-  <li><a href="https://en.wikipedia.org/wiki/Hyperbolic_functions">Wikipedia:hyperbolic sine</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Hyperbolic_functions">Wikipedia:hyperbolic functions</a></li>
 </ul>
 
 <p><a href="ASINH"><strong>asinh</strong>(3)</a></p>
